# process-monitor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  InstallDependencies.sh  LICENSE  README.md
cmake/: FindPAPI.cmake  FindProcps.cmake
configs/: example.json
include/: Args.h  Config.h  CpuMeasure.h  EnergyInfo.h  EnergyMeasure.h  Globals.h  ISourceInfo.h  IoMeasure.h  MemoryMeasure.h  PapiInfo.h  PapiMapEvents.h  PapiMeasure.h  ProcessInfo.h  ProcessUtils.h  Runner.h  StringUtils.h
src/: Config.cpp  EnergyInfo.cpp  PapiInfo.cpp  ProcessInfo.cpp  ProcessUtils.cpp  Runner.cpp  StringUtils.cpp  main.cpp
tests/: TestsConfiguration.cpp  TestsConfiguration.h
